Change Log for OpenXava project
===============================

- Fix: Content-Security-Policy error in browser console related to javascript:void(0) in some modules.
- Fix: Deleting an entity with a foreign key restriction shows a confusing FK2342432343 message to the user.
- Fixed 1 security vulnerability in dependencies, now we have 0 vulnerabilities.
- Json upgraded to 20241224.
- Jersey client, hk2 and media upgraded to 2.46.
- Log4j API and core upgraded to 2.24.3.
- JSoup upgraded to 1.18.3.
- Embedded Tomcat used in development upgraded to 9.0.98.
- Driver version in doc/new projects upgraded for AS/400.
- Works nicely with core OpenXava code using Visual Studio Code, including running the openxavatest suite.
- Fix: In the tree, dropping a node onto a sibling doesn't maintain the intended placement order.
- Fix: Tab.setBaseCondition() sometimes invalidates condition from @Tab(baseCondition=) or other condition. 
- New filterByContentInAnyProperty() method in Tab to filter for a string value in any column.
- New isJavaIdentifier() method in Strings utility class.
- Fix: XSS vulnerability using script injection in module URL parameters. 
- Fix: All English archetypes include a null folder in the created project.
- Fix: Drag & drop in the tree loses the children of the moved node in specific cases.
- Fix: Loading... message fixed with a @Calculation property of a reference inside a hidden section.
- Fix: Bad tree behavior when property of idProperties of @Tree has duplicated values in database.
- Fix: It's possible to add nodes to the tree with duplicate value for id property.
- Lessons 8 and 9 of the reporting course with JasperReports available in the documentation with video.
- Fix: Action labels in subcontroller not aligned correctly when actions have images of different sizes.
- Fix: Typing to change a reference in an @ElementCollection fails if the ID is not among the properties.

OpenXava 7.4.4 (2024-12-5)
--------------------------