@@ -1640,20 +1640,5 @@
 		<action name="filterByX" mode="list"
 			class="org.openxava.test.actions.FilterByXAction"/>			
 	</controller>	
-	
-	<controller name="TypicalWithOutNew">
-		<extends controller="Typical" excluded-actions="new"/>
-		<extends controller="New"/>	
-	</controller>
 
-	<controller name="New">
-			<action  name="new" 
-			class="org.openxava.actions.NewAction"
-			image="new.gif"
-			icon="library-plus"
-			keystroke="Control N">
-			<set property="restoreModel" value="true"/>			
-		</action>	
-	</controller>
-	
 </controllers>
